crates/compiler/cypress/tests/snapshots/test_parse__interface_with_newline_header_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "interface T exposes [] imports []\n\n"
---
(BeginFile
    (BeginHeaderInterface
        ModuleName=>UpperIdent@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderInterface)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

