crates/compiler/cypress/tests/snapshots/test_parse__lambda_decl.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "abc = \\def ->\n    ghi\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginLambda
                Ident=>LowerIdent@3
                InlineLambdaArrow=>OpArrow@4
                (BeginBlock HintExpr Ident=>LowerIdent@5 EndBlock)
            EndLambda)
        EndAssignDecl)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("abc"), Lambda([Ident("def")], Block([Ident("ghi")])))

[=== formatted below ===]

