crates/compiler/cypress/tests/snapshots/test_parse__lambda_in_chain_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\"a string\"\n|> Str.toUtf8\n|> List.map \\byte -> byte + 1\n|> List.reverse\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            String=>String@0
            InlinePizza=>OpPizza@1
            (* ModuleName=>UpperIdent@2 DotModuleLowerIdent)
            InlinePizza=>OpPizza@4
            (* ModuleName=>UpperIdent@5 DotModuleLowerIdent)
        EndPizza)
        HintExpr
        (BeginLambda
            Ident=>LowerIdent@8
            InlineLambdaArrow=>OpArrow@9
            (*
                (* Ident=>LowerIdent@10 InlineBinOpPlus=>OpPlus@11 Num=>Int@12 EndBinOpPlus)
                InlinePizza=>OpPizza@13
                (* ModuleName=>UpperIdent@14 DotModuleLowerIdent)
            EndPizza)
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Pizza([String("\"a string\""), ModuleLowerName("Str", ".toUtf8"), ModuleLowerName("List", ".map")])
Lambda([Ident("byte")], Pizza([BinOp(Ident("byte"), Plus, IntBase10("1")), ModuleLowerName("List", ".reverse")]))

[=== formatted below ===]

