crates/compiler/cypress/tests/snapshots/test_parse__leading_comment.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "# hello\nabc\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("abc")

[=== formatted below ===]
# hello
abc

