crates/compiler/cypress/tests/snapshots/test_parse__list_closing_indent_not_enough_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "myList = [\n    0,\n    [\n        a,\n        b,\n],\n    1,\n]\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginList
                Num=>Int@3
                (BeginList Ident=>LowerIdent@6 Ident=>LowerIdent@8 EndList)
                Num=>Int@12
            EndList)
        EndAssignDecl)
        HintExpr
        Num=>Int@15
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("myList"), List([IntBase10("0"), List([Ident("a"), Ident("b")]), IntBase10("1")]))
IntBase10("42")

[=== formatted below ===]

